--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+frontend/node_modules/
+
+backend/venv/
+
+backend/.idea/
+
+backend/db.sqlite3
+
+backend/backend_todo/__pycache__/
+
+backend/rest_api/migrations/
+
+backend/rest_api/__pycache__/
